--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
   <Title>Aloha World</Title>
-  <a href="google.com">How to write a textbook</a>
+  <a href="https://www.google.com/">How to write a textbook</a>
 </html>
