testing java applet

--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 <html>
   <Title>Aloha World</Title>
-  <a href="https://www.google.com/">How to write a textbook</a>
+  <p>
+    <a href="https://www.google.com/">How to write a textbook</a>
+  </p>
+  
+  <Applet Code="MyApplet.class" width=200 Height=100>
+  
+  </Applet>
+  
 </html>
